Edited wiki page through web user interface.

--- a/wiki/TagLib.wiki
+++ b/wiki/TagLib.wiki
@@ -1,9 +1,6 @@
-#summary One-sentence summary of this page.
-
-= Introduction =
+== Introduction ==
 
 Monoplayer uses TagLib for read audio files Tag Information (you need taglib and taglib#).
 
 === More info ===
 http://www.taglib-sharp.com
-
